frontend/src/pages/search/search.scss
.SearchPage {
  &-input {
    font-size: 1.5rem;
    position: relative;

    .form-control {
      font-size: 1.5rem;
      padding-left: 2.5rem;
    }

    .fa-magnifying-glass {
      left: 0.6rem;
      position: absolute;
      top: 0.8rem;

      path {
        fill: $text-muted;
      }
    }
  }

  &-performer {
    &-image {
      max-width: 4.67rem;
    }
  }

  &-scene {
    &-image {
      max-width: 12.44rem;
    }
  }

  &-performer,
  &-scene {
    display: block;

    .card {
      display: flex;
      flex-direction: row;
      padding: 10px;
    }

    &:hover {
      text-decoration: none;

      .card {
        background-color: #495b68;
      }
    }

    &-image {
      border-radius: 3px;
      flex-shrink: 0;
      image-rendering: smooth;
      object-fit: cover;
      overflow: hidden;

      &[src=""] {
        visibility: hidden;
      }

      .fa-icon {
        margin-right: 0 !important;
      }
    }
  }

  .fa-icon {
    margin-right: 10px;
  }
}

